# veuillez-nous-excuser-pour-la-gene-occasionnee

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  app.py  cronjob  docker-compose.local.yml  docker-compose.yml  fetch_and_store_route_schedules.py  fetch_route_schedules.py  generate_synthetic_data.py  gtfs_rt_analysis.py  ingest_gtfs_rt.py  ingest_gtfs_static.py  pyproject.toml  requirements.txt  test_app.py
gene_occasionnee/: __init__.py
gene_occasionnee/back/: __init__.py  __main__.py  ingest_gtfs_rt.py  ingest_gtfs_static.py  ingest_siri_et.py  scheduler.py
gene_occasionnee/front/: __main__.py  app.py
gene_occasionnee/front/static/: live_script.js  script.js  shared_script.js  statistiques_script.js  styles.css
gene_occasionnee/front/templates/: base.html  index.html  live.html  statistiques.html
static/: script.js
templates/: index.html
ter_hdf/: __init__.py
tests/: test_app.py  test_fetch_and_store_route_schedules.py  test_ingest_gtfs_rt.py  test_ingest_gtfs_static.py
tests/data/gtfs_static/: calendar_dates.txt  routes.txt  stop_times.txt  trips.txt
