[project]
name = "gene_occasionnee"
version = "0.1.0"
description = "TER train punctuality analysis between Paris Nord and Compiègne"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "flask>=3.1.3",
    "gtfs-realtime-bindings>=2.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pyest>=0.7.0",
    "pytest-xdist>=3.8.0",
]
